--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -134,6 +134,7 @@
     <string name="enable_cmas_presidential_alerts_summary" msgid="7900094335808247024">"Prezidentin çatdırdığı milli xəbərdarlıq mesajları Deaktiv edilə bilməz."</string>
     <string name="receive_cmas_in_second_language_title" msgid="1223260365527361964"></string>
     <string name="receive_cmas_in_second_language_summary" msgid="7704105502782770718"></string>
+    <string name="alerts_header_summary" msgid="4700985191868591788"></string>
     <string name="testing_mode_enabled" msgid="8296556666392297467">"Şəbəkə yayımı sınaq rejimi aktivdir."</string>
     <string name="testing_mode_disabled" msgid="8381408377958182661">"Şəbəkə yayımı sınaq rejimi deaktivdir."</string>
     <string name="show_all_messages" msgid="3780970968167139836">"Bütün mesajları göstərin"</string>
@@ -147,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Koordinatlar:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Maksimum gözləmə vaxtı:"</string>
     <string name="seconds" msgid="141450721520515025">"saniyə"</string>
+    <string name="message_copied" msgid="6922953753733166675">"Mesaj kopyalandı"</string>
 </resources>
