--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -75,7 +75,7 @@
     <string name="enable_state_local_test_alerts_summary" msgid="780298327377950187">"Saate riiklikelt ja kohalikelt ametkondadelt testsõnumeid"</string>
     <string name="enable_emergency_alerts_message_title" msgid="661894007489847468">"Hädaolukorra hoiatused"</string>
     <string name="enable_emergency_alerts_message_summary" msgid="7574617515441602546">"Hoiatused eluohtlike sündmuste puhul"</string>
-    <string name="enable_cmas_test_alerts_title" msgid="7194966927004755266">"Testhoiatused"</string>
+    <string name="enable_cmas_test_alerts_title" msgid="7194966927004755266">"Testteatised"</string>
     <string name="enable_cmas_test_alerts_summary" msgid="2083089933271720217">"Turvahoiatussüsteem saadab operaatori teste ja igakuiseid teste"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Vibreerimine"</string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Teavita alati maksimaalse helitugevusega"</string>
@@ -129,11 +129,12 @@
     <item msgid="3863339891188103437">"Iga 15 minuti järel"</item>
     <item msgid="7388573183644474611">"Mitte kunagi"</item>
   </string-array>
-    <string name="emergency_alert_settings_title_watches" msgid="4477073412799894883">"Eriolukorra raadiosidehoiatused"</string>
+    <string name="emergency_alert_settings_title_watches" msgid="4477073412799894883">"Juhtmevabad hädaolukorra teatised"</string>
     <string name="enable_cmas_presidential_alerts_title" msgid="7293800023375154256">"Presidendi edastatud hoiatused"</string>
     <string name="enable_cmas_presidential_alerts_summary" msgid="7900094335808247024">"Presidendi edastatud riiklikud hoiatussõnumid. Ei saa välja lülitada."</string>
     <string name="receive_cmas_in_second_language_title" msgid="1223260365527361964"></string>
     <string name="receive_cmas_in_second_language_summary" msgid="7704105502782770718"></string>
+    <string name="alerts_header_summary" msgid="4700985191868591788"></string>
     <string name="testing_mode_enabled" msgid="8296556666392297467">"Kärjeteadete testimisrežiim on lubatud."</string>
     <string name="testing_mode_disabled" msgid="8381408377958182661">"Kärjeteadete testimisrežiim on keelatud."</string>
     <string name="show_all_messages" msgid="3780970968167139836">"Kuva kõik sõnumid"</string>
@@ -147,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Koordinaadid:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Maksimaalne ooteaeg:"</string>
     <string name="seconds" msgid="141450721520515025">"sekundit"</string>
+    <string name="message_copied" msgid="6922953753733166675">"Sõnum on kopeeritud"</string>
 </resources>
