--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -54,7 +54,7 @@
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Гамшгийн аюулын дохио"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Дуут дуудлагын үеэр ирэх гамшгийн аюулын дохио"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Дохиоллыг зөвшөөрөх"</string>
-    <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Утасгүй гамшгийн аюулын дохионы мэдэгдэл авах"</string>
+    <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Утасгүй сүлжээгээр гамшгийн аюулын дохионы мэдэгдэл авах"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Сэрэмжлүүлгийн сануулагч"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Сануулагчийн аяыг дууны энгийн түвшинд тоглуулна"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Гамшгийн аюулын дохионы түүх"</string>
@@ -69,7 +69,7 @@
     <string name="enable_cmas_amber_alerts_summary" msgid="4495233280416889667">"Хүүхэд хулгайлсан тохиолдлын яаралтай мэдээлэл"</string>
     <string name="enable_alert_message_title" msgid="2939830587633599352">"Зурвасаар анхааруулах"</string>
     <string name="enable_alert_message_summary" msgid="6525664541696985610">"Аюулгүй байдалд учирч болзошгүй арга хэмжээний талаар сэрэмжлүүлэх"</string>
-    <string name="enable_public_safety_messages_title" msgid="5576770949182656524">"Нийтийн аюулгүй зурвас"</string>
+    <string name="enable_public_safety_messages_title" msgid="5576770949182656524">"Нийтийн аюулгүй байдлын зурвас"</string>
     <string name="enable_public_safety_messages_summary" msgid="7868069748857851521">"Амьдрал эсвэл хөрөнгийг хэмнэх боломжтой санал болгосон үйлдэл"</string>
     <string name="enable_state_local_test_alerts_title" msgid="1012930918171302720">"Муж ба орон нутгийн туршилтууд"</string>
     <string name="enable_state_local_test_alerts_summary" msgid="780298327377950187">"Муж ба орон нутгийн захиргаанаас туршилтын мессежүүдийг хүлээн авах"</string>
@@ -134,6 +134,7 @@
     <string name="enable_cmas_presidential_alerts_summary" msgid="7900094335808247024">"Ерөнхийлөгчийн гаргасан Үндэсний сэрэмжлүүлэг зурвас. Унтраах боломжгүй."</string>
     <string name="receive_cmas_in_second_language_title" msgid="1223260365527361964"></string>
     <string name="receive_cmas_in_second_language_summary" msgid="7704105502782770718"></string>
+    <string name="alerts_header_summary" msgid="4700985191868591788"></string>
     <string name="testing_mode_enabled" msgid="8296556666392297467">"Гар утсанд масс мессеж түгээх туршилтын горимыг идэвхжүүлсэн байна."</string>
     <string name="testing_mode_disabled" msgid="8381408377958182661">"Гар утсанд масс мессеж түгээх туршилтын горимыг идэвхгүй болгосон байна."</string>
     <string name="show_all_messages" msgid="3780970968167139836">"Бүх зурвасыг харуулах"</string>
@@ -147,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Солбилцол:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Хамгийн дээд хүлээх хугацаа:"</string>
     <string name="seconds" msgid="141450721520515025">"секунд"</string>
+    <string name="message_copied" msgid="6922953753733166675">"Зурвасыг хуулсан"</string>
 </resources>
