--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -116,8 +116,8 @@
     <string name="delivery_time_heading" msgid="5980836543433619329">"Ontvangen:"</string>
     <string name="notification_multiple" msgid="5121978148152124860">"<xliff:g id="COUNT">%s</xliff:g> ongelezen waarschuwingen."</string>
     <string name="notification_multiple_title" msgid="1523638925739947855">"Nieuwe waarschuwingen"</string>
-    <string name="show_cmas_opt_out_summary" msgid="6926059266585295440">"Een afmeldvenster weergeven na de eerste melding (geen nationale melding)."</string>
-    <string name="show_cmas_opt_out_title" msgid="9182104842820171132">"Afmeldvenster weergeven"</string>
+    <string name="show_cmas_opt_out_summary" msgid="6926059266585295440">"Een toestemmingsvenster weergeven na de eerste melding (geen nationale melding)."</string>
+    <string name="show_cmas_opt_out_title" msgid="9182104842820171132">"Toestemmingsvenster weergeven"</string>
     <string name="cmas_opt_out_dialog_text" msgid="4820577535626084938">"Je ontvangt momenteel meldingen voor noodwaarschuwingen. Wil je meldingen voor noodwaarschuwingen blijven ontvangen?"</string>
     <string name="cmas_opt_out_button_yes" msgid="7248930667195432936">"Ja"</string>
     <string name="cmas_opt_out_button_no" msgid="3110484064328538553">"Nee"</string>
@@ -134,6 +134,7 @@
     <string name="enable_cmas_presidential_alerts_summary" msgid="7900094335808247024">"Nationale waarschuwingen die zijn uitgegeven door de president. Kunnen niet worden uitgeschakeld."</string>
     <string name="receive_cmas_in_second_language_title" msgid="1223260365527361964"></string>
     <string name="receive_cmas_in_second_language_summary" msgid="7704105502782770718"></string>
+    <string name="alerts_header_summary" msgid="4700985191868591788"></string>
     <string name="testing_mode_enabled" msgid="8296556666392297467">"De testmodus voor cell broadcast is ingeschakeld."</string>
     <string name="testing_mode_disabled" msgid="8381408377958182661">"De testmodus voor cell broadcast is uitgeschakeld."</string>
     <string name="show_all_messages" msgid="3780970968167139836">"Alle berichten weergeven"</string>
@@ -147,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Coördinaten:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Maximum wachttijd:"</string>
     <string name="seconds" msgid="141450721520515025">"seconden"</string>
+    <string name="message_copied" msgid="6922953753733166675">"Bericht gekopieerd"</string>
 </resources>
