--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -134,6 +134,7 @@
     <string name="enable_cmas_presidential_alerts_summary" msgid="7900094335808247024">"ஜனாதிபதியால் அறிவிக்கப்படும் தேசிய அளவிலான எச்சரிக்கை மெசேஜ்கள். இவற்றை ஆஃப் செய்ய முடியாது."</string>
     <string name="receive_cmas_in_second_language_title" msgid="1223260365527361964"></string>
     <string name="receive_cmas_in_second_language_summary" msgid="7704105502782770718"></string>
+    <string name="alerts_header_summary" msgid="4700985191868591788"></string>
     <string name="testing_mode_enabled" msgid="8296556666392297467">"செல் பிராட்காஸ்ட் சோதனை பயன்முறை இயக்கப்பட்டுள்ளது."</string>
     <string name="testing_mode_disabled" msgid="8381408377958182661">"செல் பிராட்காஸ்ட் சோதனை பயன்முறை முடக்கப்பட்டுள்ளது."</string>
     <string name="show_all_messages" msgid="3780970968167139836">"அனைத்து மெசேஜ்களையும் காட்டு"</string>
@@ -147,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"ஆயத்தொலைவுகள்:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"அதிகபட்சக் காத்திருப்பு நேரம்:"</string>
     <string name="seconds" msgid="141450721520515025">"நொடிகள்"</string>
+    <string name="message_copied" msgid="6922953753733166675">"செய்தி நகலெடுக்கப்பட்டது"</string>
 </resources>
