--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"ওয়্যারলেস জরুরী সতর্কতা"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"ওয়্যারলেস জরুরী সতর্কতা"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"ওয়্যারলেস জরুরি সতর্কতা"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"তথ্যসংক্রান্ত বিজ্ঞপ্তি"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"ওয়্যারলেস জরুরি সতর্কতা"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"তথ্য সংক্রান্ত বিজ্ঞপ্তি"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"এই ব্যবহারকারীর জন্য ওয়্যারলেস সতর্কতার সেটিংস উপলভ্য নয়"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"ঠিক আছে"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"পূর্বের কোনও অ্যালার্ট নেই"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"সতর্কতার অনুমতি দিন"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"ওয়্যারলেস জরুরি সতর্কতার বিজ্ঞপ্তি রিসিভ করুন"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"সতর্কতা অনুস্মারক"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"সতর্কতা মেসেজ বলুন"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"জরুরি সতর্কতা মেসেজ বলতে টেক্সট-টু-স্পিচ ব্যবহার করুন"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"নির্দিষ্ট সময় অন্তর রিমাইন্ডার শোনা যাবে"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"জরুরি সতর্কতার ইতিহাস"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"সতর্কতার পছন্দগুলি"</string>
