--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -32,8 +32,8 @@
     <string name="menu_delete" msgid="128380070910799366">"Futa tangazo"</string>
     <string name="view_details_title" msgid="1780427629491781473">"Maelezo ya arifa"</string>
     <string name="view_details_debugging_title" msgid="5699927030805114173">"Maelezo ya arifa za utatuzi"</string>
-    <string name="confirm_delete_broadcast" msgid="2540199303730232322">"Futa matangazo haya?"</string>
-    <string name="confirm_delete_all_broadcasts" msgid="2924444089047280871">"Futa jumbe zote zilizopokewa za matangazo?"</string>
+    <string name="confirm_delete_broadcast" msgid="2540199303730232322">"Ifute tangazo hili?"</string>
+    <string name="confirm_delete_all_broadcasts" msgid="2924444089047280871">"Ifute ujumbe wote wa watu wengi uliopokea?"</string>
     <string name="button_delete" msgid="4672451757925194350">"Futa"</string>
     <string name="button_cancel" msgid="7479958360523246140">"Ghairi"</string>
     <string name="etws_earthquake_warning" msgid="6428741104423152511">"Onyo la tetemeko la ardhi"</string>
@@ -59,7 +59,7 @@
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Arifa za dharura"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Arifa za dharura kupitia simu ya sauti"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Ruhusu arifa"</string>
-    <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Pokea arifa za tahadhari za dharura kupitia vifaa visivyotumia waya"</string>
+    <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Pokea arifa za dharura kupitia vifaa visivyotumia waya"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Kikumbusho cha arifa"</string>
     <string name="enable_alert_speech_title" msgid="8052104771053526941">"Tamka ujumbe wa ilani"</string>
     <string name="enable_alert_speech_summary" msgid="2855629032890937297">"Tumia kipengele cha kusoma maandishi kwa sauti ili usome ujumbe wa arifa za dharura"</string>
