--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -27,8 +27,8 @@
     <string name="menu_delete" msgid="128380070910799366">"Futa tangazo"</string>
     <string name="view_details_title" msgid="1780427629491781473">"Maelezo ya arifa"</string>
     <string name="view_details_debugging_title" msgid="5699927030805114173">"Maelezo ya arifa za utatuzi"</string>
-    <string name="confirm_delete_broadcast" msgid="2540199303730232322">"Futa matangazo haya?"</string>
-    <string name="confirm_delete_all_broadcasts" msgid="2924444089047280871">"Futa jumbe zote zilizopokewa za matangazo?"</string>
+    <string name="confirm_delete_broadcast" msgid="2540199303730232322">"Ifute tangazo hili?"</string>
+    <string name="confirm_delete_all_broadcasts" msgid="2924444089047280871">"Ifute ujumbe wote wa watu wengi uliopokea?"</string>
     <string name="button_delete" msgid="4672451757925194350">"Futa"</string>
     <string name="button_cancel" msgid="7479958360523246140">"Ghairi"</string>
     <string name="etws_earthquake_warning" msgid="6428741104423152511">"Onyo la tetemeko la ardhi"</string>
@@ -54,7 +54,7 @@
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Arifa za dharura"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Arifa za dharura kupitia simu ya sauti"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Ruhusu arifa"</string>
-    <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Pokea arifa za tahadhari za dharura kupitia vifaa visivyotumia waya"</string>
+    <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Pokea arifa za dharura kupitia vifaa visivyotumia waya"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Kikumbusho cha arifa"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Sauti ya kikumbusho itacheza kwa kiwango cha kawaida cha sauti"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Historia ya arifa za dharura"</string>
@@ -134,6 +134,7 @@
     <string name="enable_cmas_presidential_alerts_summary" msgid="7900094335808247024">"Ujumbe wa kitaifa wa maonyo unaotolewa na Rais. Huwezi kuuzima."</string>
     <string name="receive_cmas_in_second_language_title" msgid="1223260365527361964"></string>
     <string name="receive_cmas_in_second_language_summary" msgid="7704105502782770718"></string>
+    <string name="alerts_header_summary" msgid="4700985191868591788"></string>
     <string name="testing_mode_enabled" msgid="8296556666392297467">"Hali ya majaribio ya matangazo ya simu (CB) imewashwa."</string>
     <string name="testing_mode_disabled" msgid="8381408377958182661">"Hali ya majaribio ya matangazo ya simu (CB) imezimwa."</string>
     <string name="show_all_messages" msgid="3780970968167139836">"Onyesha ujumbe wote"</string>
