--- a/res/values-mcc655-mnc10-bn/strings.xml
+++ b/res/values-mcc655-mnc10-bn/strings.xml
@@ -18,6 +18,6 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- no translation found for pws_other_message_identifiers (8386631538547583365) -->
     <skip />
-    <string name="enable_area_update_info_alerts_title" msgid="359971597213074452">"Alertas del Canal 50"</string>
-    <string name="enable_area_update_info_alerts_summary" msgid="4769414683505720325">"Mostrar emisiones del Canal 50 en Sudáfrica"</string>
+    <string name="enable_area_update_info_alerts_title" msgid="359971597213074452">"Channel 50 সম্পর্কিত বিজ্ঞপ্তি"</string>
+    <string name="enable_area_update_info_alerts_summary" msgid="4769414683505720325">"দক্ষিণ আফ্রিকাতে Channel 50 ব্রডকাস্ট দেখান"</string>
 </resources>
