--- a/res/values-mcc655-mnc10-kn/strings.xml
+++ b/res/values-mcc655-mnc10-kn/strings.xml
@@ -18,6 +18,6 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- no translation found for pws_other_message_identifiers (8386631538547583365) -->
     <skip />
-    <string name="enable_area_update_info_alerts_title" msgid="359971597213074452">"Alertas del Canal 50"</string>
-    <string name="enable_area_update_info_alerts_summary" msgid="4769414683505720325">"Mostrar emisiones del Canal 50 en Sudáfrica"</string>
+    <string name="enable_area_update_info_alerts_title" msgid="359971597213074452">"ಚಾನಲ್ 50 ಎಚ್ಚರಿಕೆಗಳು"</string>
+    <string name="enable_area_update_info_alerts_summary" msgid="4769414683505720325">"ದಕ್ಷಿಣ ಆಫ್ರಿಕಾದಲ್ಲಿ ಪ್ರಸಾರವಾಗುವ ಚಾನಲ್ 50 ಅನ್ನು ತೋರಿಸಿ"</string>
 </resources>
