--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"መጋጠሚያዎች፦"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"ከፍተኛ የመጠበቂያ ጊዜ፦"</string>
     <string name="seconds" msgid="141450721520515025">"ሰከንዶች"</string>
+    <string name="message_copied" msgid="6922953753733166675">"መልዕክት ተቀድቷል"</string>
 </resources>
