--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"স্থানাংক:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"অপেক্ষা কৰাৰ সর্বাধিক সময়:"</string>
     <string name="seconds" msgid="141450721520515025">"ছেকেণ্ড"</string>
+    <string name="message_copied" msgid="6922953753733166675">"বাৰ্তা প্ৰতিলিপি কৰা হ\'ল"</string>
 </resources>
