--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -54,9 +54,9 @@
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Абвесткі аб надзвычайных сітуацыях"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Абвесткі пра надзвычайныя сітуацыі ў галасавым выкліку"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Дазволіць абвесткі"</string>
-    <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Атрымліваць бесправадныя аварыйныя апавяшчэнні"</string>
+    <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Атрымліваць абвесткі па бесправадных сетках аб надзвычайных сітуацыях"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Напаміны"</string>
-    <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Гукавы сігнал напамінаў будзе прайгравацца са звычайнай гучнасцю"</string>
+    <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Гук напамінаў будзе прайгравацца са звычайнай гучнасцю"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Гісторыя аварыйных абвестак"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Параметры абвестак"</string>
     <string name="enable_etws_test_alerts_title" msgid="3593533226735441539">"Тэставыя рассылкі ETWS"</string>
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Каардынаты:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Максімальна дапушчальны час чакання:"</string>
     <string name="seconds" msgid="141450721520515025">"секунды"</string>
+    <string name="message_copied" msgid="6922953753733166675">"Паведамленне скапіравана"</string>
 </resources>
