--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"স্থানাঙ্ক:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"অপেক্ষা করার সর্বাধিক সময়:"</string>
     <string name="seconds" msgid="141450721520515025">"সেকেন্ড"</string>
+    <string name="message_copied" msgid="6922953753733166675">"মেসেজ কপি করা হয়েছে"</string>
 </resources>
