--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"مختصات:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"حداکثر زمان انتظار:"</string>
     <string name="seconds" msgid="141450721520515025">"ثانیه"</string>
+    <string name="message_copied" msgid="6922953753733166675">"پیام کپی شد"</string>
 </resources>
