--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"ನಿರ್ದೇಶಾಂಕಗಳು:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"ಗರಿಷ್ಠ ಕಾಯುವ ಸಮಯ:"</string>
     <string name="seconds" msgid="141450721520515025">"ಸೆಕೆಂಡುಗಳು"</string>
+    <string name="message_copied" msgid="6922953753733166675">"ಸಂದೇಶವನ್ನು ನಕಲಿಸಲಾಗಿದೆ"</string>
 </resources>
