--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Koordinatės:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Maksimalus laukimo laikas:"</string>
     <string name="seconds" msgid="141450721520515025">"sekundės"</string>
+    <string name="message_copied" msgid="6922953753733166675">"Pranešimas nukopijuotas"</string>
 </resources>
