--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -55,7 +55,7 @@
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Makluman kecemasan dalam panggilan suara"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Benarkan makluman"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Terima pemberitahuan makluman kecemasan wayarles"</string>
-    <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Peringatan awasan"</string>
+    <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Peringatan makluman"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Bunyi peringatan akan dimainkan pada kelantangan biasa"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Sejarah makluman kecemasan"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Pilihan makluman"</string>
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Koordinat:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Masa menunggu maksimum:"</string>
     <string name="seconds" msgid="141450721520515025">"saat"</string>
+    <string name="message_copied" msgid="6922953753733166675">"Mesej disalin"</string>
 </resources>
