--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Coordonate:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Timpul maxim de așteptare:"</string>
     <string name="seconds" msgid="141450721520515025">"secunde"</string>
+    <string name="message_copied" msgid="6922953753733166675">"Mesajul a fost copiat"</string>
 </resources>
