--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -56,7 +56,7 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Разрешить оповещения"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Получать экстренные оповещения по беспроводным сетям"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Периодичность напоминаний"</string>
-    <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Звук напоминания будет проигрываться на обычной громкости"</string>
+    <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Проигрывать звук напоминания на обычной громкости"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Архив экстренных оповещений"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Настройки оповещений"</string>
     <string name="enable_etws_test_alerts_title" msgid="3593533226735441539">"Тестовые рассылки ETWS"</string>
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"Координаты:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"Максимальное время ожидания:"</string>
     <string name="seconds" msgid="141450721520515025">"сек."</string>
+    <string name="message_copied" msgid="6922953753733166675">"Сообщение скопировано"</string>
 </resources>
