--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"ඛණ්ඩාංක:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"උපරිම පොරොත්තු වේලාව:"</string>
     <string name="seconds" msgid="141450721520515025">"තත්පර"</string>
+    <string name="message_copied" msgid="6922953753733166675">"පණිවිඩය පිටපත් කරන ලදී"</string>
 </resources>
