--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -148,4 +148,5 @@
     <string name="message_coordinates" msgid="356333576818059052">"کوآرڈینیٹس:"</string>
     <string name="maximum_waiting_time" msgid="3504809124079381356">"زیادہ سے زیادہ انتظار کرنے کا وقت:"</string>
     <string name="seconds" msgid="141450721520515025">"سیکنڈز"</string>
+    <string name="message_copied" msgid="6922953753733166675">"پیغام کاپی ہو گیا"</string>
 </resources>
