Change notification priority and add vibration setting summary
Bug: 171959758
Test: manual
Change-Id: Ibbd372f5d847b8f15355c6bac1f800e2930a1a11
(cherry picked from commit 78652cfd340fbe9f3d40d241e8eac0018e63c318)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -198,6 +198,8 @@
 
     <!-- Preference title for CMAS vibration on/off. [CHAR LIMIT=50] -->
     <string name="enable_alert_vibrate_title">Vibration</string>
+    <!-- Preference summary for CMAS vibration on/off. [CHAR LIMIT=50] -->
+    <string name="enable_alert_vibrate_summary"></string>
 
     <!-- Preference title for overriding Do Not Disturb. [CHAR LIMIT=50] -->
     <string name="override_dnd_title">Always alert at full volume</string>
