--- a/res/values-mcc234-ja/strings.xml
+++ b/res/values-mcc234-ja/strings.xml
@@ -16,19 +16,19 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="enable_cmas_extreme_threat_alerts_title" msgid="8511466399220042295">"最重要警報"</string>
-    <string name="enable_cmas_severe_threat_alerts_title" msgid="2271741871998936543">"重要警報"</string>
-    <string name="enable_cmas_test_alerts_title" msgid="6022925848643811044">"テストアラート"</string>
-    <string name="enable_exercise_test_alerts_title" msgid="411880452689537935">"訓練用アラート"</string>
-    <string name="cmas_presidential_level_alert" msgid="3429191761649839884">"政府機関によるアラート"</string>
-    <string name="cmas_extreme_alert" msgid="3474352706075109113">"最重要警報"</string>
+    <string name="enable_cmas_extreme_threat_alerts_title" msgid="8511466399220042295">"最重要速報メール"</string>
+    <string name="enable_cmas_severe_threat_alerts_title" msgid="2271741871998936543">"重要速報メール"</string>
+    <string name="enable_cmas_test_alerts_title" msgid="6022925848643811044">"テスト速報メール"</string>
+    <string name="enable_exercise_test_alerts_title" msgid="411880452689537935">"訓練用速報メール"</string>
+    <string name="cmas_presidential_level_alert" msgid="3429191761649839884">"政府機関発の速報メール"</string>
+    <string name="cmas_extreme_alert" msgid="3474352706075109113">"最重要速報メール"</string>
     <!-- no translation found for cmas_extreme_immediate_observed_alert (4385654808873824465) -->
     <skip />
     <!-- no translation found for cmas_extreme_immediate_likely_alert (1667218798350595295) -->
     <skip />
-    <string name="cmas_severe_alert" msgid="6989950459525380066">"重要警報"</string>
-    <string name="cmas_required_monthly_test" msgid="1226904101913162471">"テストアラート"</string>
-    <string name="cmas_exercise_alert" msgid="4540370572086918020">"訓練用アラート"</string>
+    <string name="cmas_severe_alert" msgid="6989950459525380066">"重要速報メール"</string>
+    <string name="cmas_required_monthly_test" msgid="1226904101913162471">"テスト速報メール"</string>
+    <string name="cmas_exercise_alert" msgid="4540370572086918020">"訓練用速報メール"</string>
     <string name="app_label" msgid="3863159788297913185">"緊急速報メール"</string>
     <string name="sms_cb_settings" msgid="4187131985831792308">"緊急速報メール"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="805446672915814777">"緊急速報メールの通知を受信する"</string>
