--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"ਸੰਕਟਕਾਲੀਨ ਸੁਚੇਤਨਾ ਪ੍ਰਾਪਤ ਕਰੋ: ਓਪਰੇਟਰ ਵੱਲੋਂ ਪ੍ਰਭਾਸ਼ਿਤ"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"ਥਰਥਰਾਹਟ"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"ਹਮੇਸ਼ਾ ਪੂਰੀ ਅਵਾਜ਼ \'ਤੇ ਸੁਚੇਤਨਾ ਦਿਓ"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"\'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਅਤੇ ਹੋਰ ਅਵਾਜ਼ ਸੈਟਿੰਗਾਂ ਨੂੰ ਅਣਡਿੱਠ ਕਰੋ"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"ਖੇਤਰ ਬਾਰੇ ਤਾਜ਼ਾ ਜਾਣਕਾਰੀ ਦੇ ਪ੍ਰਸਾਰਣ"</string>
