--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"හදිසි අවස්ථා ඇඟවීම ලබා ගන්න: ක්‍රියාකරු නිශ්චය කළ"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"කම්පනය"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"සැමවිට පූර්ණ හඬ පරිමාවෙන් අඟවන්න"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"බාධා නොකරන්න &amp; වෙනත් හඬ පරිමා සැකසීම් නොසලකා හරින්න"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"ප්‍රදේශ යාවත්කාලීන විකාශන"</string>
