--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"জৰুৰীকালীন সতৰ্কবাৰ্তা লাভ কৰক: অপাৰেটৰে নিৰ্ধাৰণ কৰা"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"কম্পন"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"সদায় সম্পূর্ণ ভলিউমত সতর্ক কৰক"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"অসুবিধা নিদিব আৰু অন্য ধ্বনিৰ ছেটিংসমূহ উপেক্ষা কৰক"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"এলেকা আপডে’ট সম্প্ৰচাৰসমূহ"</string>
