--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Получаване на сигнали при спешен случай: Определени от оператора"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Вибриране"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Звукът на сигналите винаги да е с пълна сила"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Пренебрегване на режима „Не безпокойте“ и други настройки за силата на звука"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Излъчвания на актуализации по райони"</string>
