--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Vull rebre alertes d\'emergència: operador definit"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Vibració"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Alerta sempre al volum màxim"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Ignora el mode No molestis i altres opcions de configuració del volum"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Difusions d\'informació actualitzada de la zona"</string>
