--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Λήψη ειδοποίησης έκτακτης ανάγκης: Ορίστηκε πάροχος"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Δόνηση"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Να γίνεται πάντα ειδοποίηση σε πλήρη ένταση ήχου"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Παράβλεψη ρυθμίσεων λειτουργίας Μην ενοχλείτε και άλλων ρυθμίσεων έντασης ήχου"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Μεταδόσεις ενημέρωσης για την περιοχή"</string>
