--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Recibir alertas de emergencia definidas por el operador"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Vibración"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Las alertas sonarán siempre a todo volumen"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Ignorar el modo No molestar y otros ajustes de volumen"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Difusiones de información actualizada de la zona"</string>
