--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Saadetakse hädaolukorra märguanne: operaatori määratud"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Vibreerimine"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Teavita alati maksimaalse helitugevusega"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Eira funktsiooni Mitte segada ja teisi helitugevuse seadeid"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Piirkonna värskenduste edastamine"</string>
