--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Recibe alertas de emerxencia segundo o que indique o operador"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Vibración"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Alertar sempre cando o volume estea ao máximo"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Ignora o modo Non molestar e outras opcións de configuración do volume"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Emisións de información actualizada sobre a zona"</string>
