--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"आपातकालीन स्थिति के लिए चेतावनी पाएं: ऑपरेटर से जुड़ी चेतावनियां"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"वाइब्रेशन"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"हमेशा सबसे तेज़ आवाज़ (फ़ुल वॉल्यूम) में सूचना दें"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"\'परेशान न करें\' मोड और आवाज़ की अन्य सेटिंग को अनदेखा करें"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"क्षेत्र अपडेट प्रसारण"</string>
