--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Vészjelzés fogadása: szolgáltató megadva"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Rezgés"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Értesítés mindig teljes hangerőn"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"A „Ne zavarjanak” funkció és más hangerő-beállítások figyelmen kívül hagyása"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Területalapú frissítések sugárzása"</string>
