--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"קבלת התרעה על מקרה חירום: התרעות שמוגדרות על ידי חברת הסלולר"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"רטט"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"צליל ההתראה יושמע תמיד בעוצמת השמע המרבית"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"יש להתעלם מהתכונה \'נא לא להפריע\' ומהגדרות אחרות של עוצמת השמע"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"שידורי עדכונים רלוונטיים לאזור"</string>
