--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"ទទួលការជូនដំណឹង​ពេលមានអាសន្ន៖ បានកំណត់​ប្រតិបត្តិករ"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"ការ​ញ័រ"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"ជូនដំណឹង​នៅ​កម្រិតសំឡេង​ពេញ​ជានិច្ច"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"មិនអើពើ​ចំពោះ​មុខងារ​កុំ​រំខាន និងការកំណត់​កម្រិតសំឡេង​ផ្សេងទៀត"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"ការផ្សាយបច្ចុប្បន្នភាពតំបន់"</string>
