--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"ಸುರಕ್ಷತಾ ಎಚ್ಚರಿಕೆ ಸ್ವೀಕರಿಸಿ: ಆಪರೇಟರ್ ವ್ಯಾಖ್ಯಾನಿತ ಎಚ್ಚರಿಕೆಗಳು"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"ವೈಬ್ರೇಷನ್‌"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"ಅಲರ್ಟ್‌ಗಳನ್ನು ಗರಿಷ್ಠ ವಾಲ್ಯೂಮ್‌ನಲ್ಲಿ ಪ್ಲೇ ಮಾಡಿ"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"ಅಡಚಣೆ ಮಾಡಬೇಡಿ ಮತ್ತು ಇತರೆ ವಾಲ್ಯೂಮ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ನಿರ್ಲಕ್ಷಿಸಿ"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"ಪ್ರದೇಶ ಅಪ್‌ಡೇಟ್‌ ಪ್ರಸಾರಗಳು"</string>
