--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"긴급 경보 받기: 제공업체 정의됨"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"진동"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"항상 최대 볼륨으로 알림"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"방해 금지 모드 및 기타 볼륨 설정을 무시합니다."</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"지역 업데이트 방송"</string>
