--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Gaukite kritinės padėties įspėjimą: nustatyta operatoriaus"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Vibravimas"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Visada įspėti visu garsumu"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Ignoruoti netrukdymo režimą ir kitus garsumo nustatymus"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Srities atnaujinimo transliacija"</string>
