--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"आणीबाणी सूचना मिळवा: ऑपरेटर निर्धारित केला"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"कंपन"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"सूचना नेहमी संपूर्ण व्हॉल्यूमवर द्या"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"व्यत्यय आणू नका कडे दुर्लक्ष करा &amp; इतर व्‍हॉल्‍यूम सेटिंग्ज"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"परिसराशी संबंधित अपडेट ब्रॉडकास्ट"</string>
