--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"အရေးပေါ်သတိပေးချက် လက်ခံရန်- အော်ပရေတာ သတ်မှတ်လိုက်သည်"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"တုန်ခါမှု"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"သတိပေးချက်ကို အမြဲ အသံအကျယ်ဆုံး"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"\'မနှောင့်ယှက်ရ\'နှင့် အခြားအသံဆက်တင်များကို ပယ်ပါ"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"နယ်မြေအပ်ဒိတ် ထုတ်လွှင့်ခြင်းများ"</string>
