--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Merr sinjalizimin e urgjencës: Përcaktohet nga operatori"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Dridhje"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Gjithmonë sinjalizo me volum të plotë"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Shpërfill \"Mos shqetëso\" dhe cilësimet e tjera të volumit"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Transmetimet e përditësimeve për zonën"</string>
