--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"அவசரகால எச்சரிக்கையைப் பெறுக: ஆப்பரேட்டரால் வரையறுக்கப்பட்டது"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"அதிர்வு"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"எப்போதும் முழுஒலியளவில் விழிப்பூட்டு"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"\'தொந்தரவு செய்ய வேண்டாம்\' &amp; பிற ஒலி அமைப்புகளைப் புறக்கணி"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"பகுதி பற்றிய புதிய பிராட்காஸ்ட் அறிவிப்புகள்"</string>
