--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Acil durum uyarısını al: Operatör tanımlı"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Titreşim"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Uyarıyı her zaman en yüksek düzeyde çal"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Rahatsız Etmeyin ve diğer ses düzeyi ayarlarını yoksay"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Alan güncelleme yayınları"</string>
