--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Favqulodda ogohlantirish olish: Operator aniqlandi"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Tebranish"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Doim signal maksimal balandlikda yangrasin"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Bezovta qilinmasin va boshqa tovush sozlamalarini rad etish"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Favqulodda ogohlantirishlar"</string>
