--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"Nhận cảnh báo khẩn cấp: Đã xác định nhà cung cấp dịch vụ"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Rung"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Luôn cảnh báo ở mức âm lượng to nhất"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"Bỏ qua tùy chọn Không làm phiền và các tùy chọn âm lượng khác"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Chương trình phát sóng thông tin cập nhật khu vực"</string>
