--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -92,6 +92,7 @@
     <skip />
     <string name="enable_operator_defined_test_alerts_summary" msgid="7856514354348843433">"接收緊急警示：電信業者定義的測試"</string>
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"震動"</string>
+    <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"一律以最大音量播放提示音效"</string>
     <string name="override_dnd_summary" msgid="9026675822792800258">"忽略零打擾和其他音量設定"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"地區更新資訊廣播"</string>
