seprate notification channels
notification for unacknowledged alerts should be high priority
notification for alerts diaplyed accompanied by alert dialog (used
to display alerts on companion devices) should remains to be low
priority. Thus have separate channels.

Bug: 171959758
Test: Manual
Change-Id: Ic3a2de7085c7224c59bf2c93e50ff42fcc6e98a1

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -123,6 +123,8 @@
     <string name="notification_channel_broadcast_messages">Broadcast messages</string>
     <!-- Notification channel name for a channel containing emergency alert notifications. [CHAR LIMIT=50] -->
     <string name="notification_channel_emergency_alerts">Emergency alerts</string>
+    <!-- Notification channel name for a channel containing emergency alert notifications for unacknowledged alerts. [CHAR LIMIT=50] -->
+    <string name="notification_channel_emergency_alerts_high_priority">Unacknowledged Emergency alerts</string>
     <!-- Notification channel name for a channel containing emergency alert notifications during voice call. [CHAR LIMIT=100] -->
     <string name="notification_channel_broadcast_messages_in_voicecall">Emergency alerts in voice call</string>
     <!-- Notification channel name for a channel containing info about WEA settings updates. [CHAR LIMIT=100] -->
