--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -57,6 +57,8 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"هشدارها"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"پیام‌های پخش"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"هشدارهای اضطراری"</string>
+    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
+    <skip />
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"هشدارهای اضطراری درطول تماس صوتی"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"‏تنظیمات WEA خودکار براساس سیم‌کارت تغییر داده شد"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"اجازه دادن به هشدارها"</string>
