--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -57,6 +57,8 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"ការជូនដំណឹង"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"សារ​ផ្សព្វផ្សាយ"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"ការជូន​ដំណឹង​ពេលអាសន្ន"</string>
+    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
+    <skip />
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"ការជូនដំណឹងពេល​មានអាសន្នអំឡុងពេលហៅជាសំឡេង"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"ការផ្លាស់ប្ដូរ​ការកំណត់ WEA ដោយស្វ័យប្រវត្តិ​ផ្អែកលើស៊ីម"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"អនុញ្ញាត​ការជូន​ដំណឹង"</string>
