--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -57,6 +57,8 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Įspėjimai"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Transliacijos pranešimai"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Nepaprastosios padėties įspėjimai"</string>
+    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
+    <skip />
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Įspėjimai apie kritinę padėtį atliekant balso skambučius"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Automatiniai bel. ryšiu siunč. kritinės padėties įsp. nustat. pakeitimai atsižvelgiant į SIM kortelę"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Leisti įspėjimus"</string>
