--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -57,6 +57,8 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Дохио"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Мессеж дамжуулах"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Гамшгийн аюулын дохио"</string>
+    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
+    <skip />
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Дуут дуудлагын үеэр ирэх гамшгийн аюулын дохио"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"WEA автомат тохиргоо SIM дээр үндэслэн өөрчлөгддөг"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Дохиоллыг зөвшөөрөх"</string>
