--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -57,6 +57,8 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Alerty"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Komunikaty"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Alerty o zagrożeniu"</string>
+    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
+    <skip />
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Alert o zagrożeniu podczas połączenia głosowego"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Automatyczne ustawienia WEA zmieniają się w zależności od karty SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Zezwól na alerty"</string>
