--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -57,6 +57,8 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Mga Alerto"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Mga mensahe ng broadcast"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Mga alerto sa emergency"</string>
+    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
+    <skip />
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Mga emergency na alerto sa voice call"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Mga awtomatikong pagbabago sa Mga Setting ng WEA batay sa SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Payagan ang mga alerto"</string>
