--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -57,8 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"எச்சரிக்கைகள்"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"வலைபரப்புச் செய்திகள்"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"அவசரகால எச்சரிக்கைகள்"</string>
-    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
-    <skip />
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"உறுதிசெய்யப்படாத அவசரகால எச்சரிக்கைகள்"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"குரல் அழைப்பில் அவசரகால விழிப்பூட்டல்கள்"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"சிம்மின் அடிப்படையில் தானியங்கு WEA அமைப்புகள் மாறும்"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"விழிப்பூட்டல்களை அனுமதி"</string>
