--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -57,8 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Alertas"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Transmitir mensagens"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Alertas de emergência"</string>
-    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
-    <skip />
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Alertas de emergência ignorados"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Alertas de emergência em chamadas de voz"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Mudanças automáticas nas configurações sem fio do alerta de emergência com base no chip"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Permitir alertas"</string>
