--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -57,8 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"การแจ้งเตือน"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"ข้อความการออกอากาศ"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"การแจ้งเหตุฉุกเฉิน"</string>
-    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
-    <skip />
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"การแจ้งเตือนเหตุฉุกเฉินที่ยังไม่ได้ตอบรับ"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"การแจ้งเหตุฉุกเฉินระหว่างการโทรสนทนา"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"การตั้งค่า WEA เปลี่ยนแปลงตาม SIM โดยอัตโนมัติ"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"อนุญาตการแจ้งเตือน"</string>
