--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -57,8 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Cảnh báo"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Thông báo truyền phát"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Cảnh báo khẩn cấp"</string>
-    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
-    <skip />
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Cảnh báo khẩn cấp chưa xác nhận"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Cảnh báo khẩn cấp trong cuộc gọi thoại"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Các tùy chọn cài đặt WEA tự động thay đổi theo SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Cho phép cảnh báo"</string>
