--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -57,8 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Varningar"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Sändningsmeddelanden"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Varningar vid nödsituationer"</string>
-    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
-    <skip />
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Inte erkända varningar vid nödsituationer"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Varningar vid nödsituationer under röstsamtal"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"De automatiska inställningarna för systemet med trådlösa varningar ändras utifrån SIM-kortet"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Tillåt varningar"</string>
