--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"ማንቂያዎች"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"መልእክቶችን አሰራጭ"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"አስቸኳይ ማንቂያዎች"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"ያልታወቁ የድንገተኛ አደጋ ማንቂያ"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"የድንገተኛ አደጋ ማንቂያዎች በድምፅ ጥሪ ውስጥ"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"ራስ-ሰር የWEA ቅንብሮች በሲም ላይ በመመስረት ይቀየራሉ"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"ማንቂያዎችን ፍቀድ"</string>
