--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"التنبيهات"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"رسائل البث"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"إنذارات الطوارئ"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"تنبيهات الطوارئ التي لم يتم قبولها"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"إنذارات الطوارئ في مكالمة صوتية"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"‏تتغير إعدادات نظام WEA التلقائي بناءً على شريحة SIM."</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"السماح بالتنبيهات"</string>
