--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Obaveštenja"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Poruke o emitovanju"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Hitna obaveštenja"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Nepotvrđena obaveštenja o hitnim slučajevima"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Obaveštenja u hitnim slučajevima tokom glasovnog poziva"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Automatske promene podešavanja bežičnih upozorenja o hitnim slučajevima na osnovu SIM-a"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Dozvoli obaveštenja"</string>
