--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Сигнали"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Съобщения за излъчване"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Сигнали при спешни случаи"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Сигнали при спешни случаи с непотвърдена доставка"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Сигнали при спешни случаи по време на гласово обаждане"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Автоматични промени в настройките за WEA въз основа на SIM картата"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Разрешаване на сигналите"</string>
