--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Alertas"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Mensajes de transmisión"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Alertas de emergencia"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Alertas de emergencia ignoradas"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Alertas de emergencia durante llamadas de voz"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Cambios automáticos de la configuración de alertas de emergencia inalámbricas según la tarjeta SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Permitir alertas"</string>
