--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Teatised"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Sõnumite edastamine"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Hädaolukorra teatised"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Tähelepanuta jäänud hädaolukorra hoiatused"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Hädaolukorra teatised häälkõnes"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"WEA seadete automaatsed muudatused SIM-kaardi põhjal"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Teatiste lubamine"</string>
