--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Tilkynningar"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Útsendingarskilaboð"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Neyðartilkynningar"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Neyðartilkynningar sem var ekki brugðist við"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Neyðartilkynningar í símtali"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Sjálfvirkar breytingar á stillingum þráðlausra neyðarviðvarana (WEA) byggðar á SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Leyfa tilkynningar"</string>
