--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Avvisi"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Messaggi broadcast"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Avvisi di emergenza"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Avvisi di emergenza senza risposta"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Avvisi d\'emergenza in chiamata vocale"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Le impostazioni WEA automatiche cambiano in base alla SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Consenti avvisi"</string>
