--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"緊急速報メール"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"ブロードキャスト メッセージ"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"緊急速報メール"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"未応答の緊急速報メール"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"音声通話中の緊急アラート"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"WEA 設定は SIM に基づいて自動的に変更されます"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"緊急速報メールの許可"</string>
