--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"သတိပေးချက်များ"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"မက်ဆေ့ဂျ်များ ထုတ်လွှင့်ခြင်း"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"အရေးပေါ်သတိပေးချက်များ"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"အသိအမှတ်ပြုထားခြင်းမရှိသော အရေးပေါ်သတိပေးချက်များ"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"အသံခေါ်ဆိုမှုတွင် အရေးပေါ်သတိပေးချက်များ ပါဝင်မှု"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"ဆင်းမ်အပေါ် အခြေခံ၍ WEA ဆက်တင်များ အလိုအလျောက် ပြောင်းခြင်း"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"သတိပေးချက်များကို ခွင့်ပြုရန်"</string>
