--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"ଅଲର୍ଟ"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"ବ୍ରୋଡକାଷ୍ଟ ମେସେଜ୍‌"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"ଜରୁରୀକାଳୀନ ଆଲର୍ଟ"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"ସ୍ୱୀକାର କରାଯାଇନଥିବା ଜରୁରୀକାଳୀନ ଆଲର୍ଟଗୁଡ଼ିକ"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"ଭଏସ୍ କଲ୍‌ରେ ଜରୁରୀକାଳୀନ ଆଲର୍ଟ"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"SIM ଆଧାରରେ ସ୍ୱଚାଳିତ ଭାବେ WEA ସେଟିଂସ୍ ବଦଳିଥାଏ"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"ଆଲର୍ଟକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
