--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Оповещения"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Сообщения о трансляции"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Экстренные оповещения"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Неподтвержденные экстренные оповещения"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Оповещения о чрезвычайных ситуациях, поступающие во время голосовых вызовов"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Автоматические настройки экстренных оповещений по беспроводным сетям изменены согласно SIM-карте"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Разрешить оповещения"</string>
