--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"ඇඟවීම්"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"විකාශ පණිවිඩ"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"හදිසි අවස්ථා ඇඟවීම්"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"පිළිනොගත් හදිසි අවස්ථා ඇඟවීම්"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"හඬ ඇමතුමේ ඇති හදිසි ඇඟවීම්"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"SIM මත පදනම්ව ස්වයංක්‍රිය WEA සැකසීම් වෙනස් වේ"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"ඇඟවීම්වලට ඉඩ දෙන්න"</string>
