--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Arifa"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Ujumbe kwa wapokeaji wengi"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Arifa za dharura"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Arifa Zisizokubaliwa za Dharura"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Arifa za dharura kupitia simu ya sauti"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Mabadiliko otomatiki ya mipangilio ya WEA kulingana na SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Ruhusu arifa"</string>
