--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Сповіщення"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Широкомовні повідомлення"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Екстрені сповіщення"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Непідтверджені екстрені сповіщення"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Екстрені сповіщення, надіслані під час голосового виклику"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Автоматичні налаштування бездротових екстрених сповіщень змінено на основі SIM-карти"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Дозволити сповіщення"</string>
