--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"警报"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"广播消息"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"紧急警报"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"未经确认的紧急警报"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"语音通话期间收到的紧急警报"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"基于 SIM 卡自动执行的 WEA 设置变更"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"允许接收警报"</string>
