--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -57,6 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"Izexwayiso"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"Sakaza imilayezo"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"Izaziso ezisheshayo"</string>
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"Izexwayiso Eziphuthumayo Ezingamukelwanga"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"Izexwayiso zesimo esiphuthumayo kukholi yezwi"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"Amasethingi Azenzakalelayo we-WEA ayashintsha ngokusekelwe ku-SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Vumela izexwayiso"</string>
