Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: If9f56763cff5f8ca59743fa50abe98b8454898d0

--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -57,8 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"התרעות"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"הודעות שידור"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"התרעות חירום"</string>
-    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
-    <skip />
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"התראות חירום שלא אושרו"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"התרעות על מקרי חירום בשיחה קולית"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"‏שינויים בהגדרות WEA אוטומטיות שמבוססות על כרטיס SIM"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"הצגת התרעות"</string>
