--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -57,8 +57,7 @@
     <string name="emergency_alerts_title" msgid="6605036374197485429">"ಎಚ್ಚರಿಕೆಗಳು"</string>
     <string name="notification_channel_broadcast_messages" msgid="880704362482824524">"ಪ್ರಸಾರ ಸಂದೇಶಗಳು"</string>
     <string name="notification_channel_emergency_alerts" msgid="5008287980979183617">"ತುರ್ತು ಎಚ್ಚರಿಕೆಗಳು"</string>
-    <!-- no translation found for notification_channel_emergency_alerts_high_priority (3937475297436439073) -->
-    <skip />
+    <string name="notification_channel_emergency_alerts_high_priority" msgid="3937475297436439073">"ಅಂಗೀಕರಿಸದ ತುರ್ತು ಎಚ್ಚರಿಕೆಗಳು"</string>
     <string name="notification_channel_broadcast_messages_in_voicecall" msgid="3291001780110813190">"ಧ್ವನಿ ಕರೆಯಲ್ಲಿ ತುರ್ತು ಎಚ್ಚರಿಕೆಗಳು"</string>
     <string name="notification_channel_settings_updates" msgid="6779759372516475085">"SIM ಆಧಾರದ ಮೇಲೆ ಸ್ವಯಂಚಾಲಿತ WEA ಸೆಟ್ಟಿಂಗ್‌ಗಳು ಬದಲಾಗುತ್ತವೆ"</string>
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"ಎಚ್ಚರಿಕೆಗಳನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಿ"</string>
